DD-39749 Fixes NPE, when matched defendant next case does not have person associated, parent or guardian (#1159) (#1193)
DD-39749 without person details there shall no associated person attribute (#1167)
DD-39623 (#1175)
DD-39907 Remand status disappearing from CAAG after LAA ref and representation order (#1166)
SNI-7860 Custody Establishment removed after LAA reference (#1153)